plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bubli'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	queryDslVersion = '5.1.0'
	springAiVersion = '1.0.9'
	lombokVersion = '1.18.38'
}

dependencies {
	implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")

	// Web / Validation
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JPA / DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	runtimeOnly 'org.postgresql:postgresql'

	// QueryDSL
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Security / JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// AWS (S3, Bedrock)
	implementation platform('software.amazon.awssdk:bom:2.29.0')
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:bedrockruntime'

	// Spring AI / RAG
	implementation 'org.springframework.ai:spring-ai-starter-model-bedrock'
	implementation 'org.springframework.ai:spring-ai-starter-model-bedrock-converse'
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'

	// 문서 처리
	implementation 'org.apache.pdfbox:pdfbox:3.0.3'
	implementation 'org.apache.poi:poi-ooxml:5.3.0'
	implementation 'org.apache.tika:tika-core:2.9.2'

	// Lombok
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// Swagger (SpringDoc OpenAPI)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

	// Actuator (모니터링)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Dev tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// QueryDSL Q-class 생성 위치 (gitignore 대상)
def generatedDir = file('build/generated/querydsl')

sourceSets {
	main {
		java {
			srcDirs += generatedDir
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.annotationProcessorPath = configurations.annotationProcessor
	options.compilerArgs += [
			'-processor',
			'lombok.launch.AnnotationProcessorHider$AnnotationProcessor,com.querydsl.apt.jpa.JPAAnnotationProcessor'
	]
	options.generatedSourceOutputDirectory = generatedDir
}

clean {
	delete generatedDir
}

tasks.named('test') {
	useJUnitPlatform()
}
